bootstrap/cloudflared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: cloudflare
spec:
  replicas: 2

  selector:
    matchLabels:
      app: cloudflared

  template:
    metadata:
      labels:
        app: cloudflared

    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:latest

          args:
            - tunnel
            - --no-autoupdate
            - run

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
