bootstrap/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd

spec:
  parentRefs:
    - name: public-gateway
      namespace: gateway

  hostnames:
    - argocd.harish8.com

  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
---

apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-grpc
  namespace: argocd
spec:
  parentRefs:
    - name: public-gateway
      namespace: gateway
  hostnames:
    - argocd.harish8.com
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
